# netctl-gui

./: .gitignore  .gitmodules  AUTHORS  CHANGELOG  COPYING  LICENSE  PKGBUILD  PKGBUILD-qt4  PKGBUILD-qt5  PKGBUILD-widget  README.md  create_archive.sh  kdeplasma-applets-netctl.install  netctl-gui.install
arch/: PKGBUILD  PKGBUILD-qt4  libnetctlgui.install  netctlgui-helper.install
sources/: CMakeLists-plasmoid-only.txt  CMakeLists.txt  config-defs.cmake  reportabug.h  sources.kdev4  version.h.in
sources/.kdev4/: netctl-gui.kdev4  sources.kdev4
sources/dataengine/: CMakeLists.txt  netctl.conf  netctl.cpp  netctl.h  pdebug.h  plasma-dataengine-netctl.conf  plasma-dataengine-netctl.desktop  plasma-engine-netctl.desktop
sources/gui/: CMakeLists.txt  bash-completions  netctl-gui.1  netctl-gui.desktop  netctl.profile  netctl.profile.5  show_scripts  zsh-completions
sources/gui/docs/: .directory  CMakeLists.txt  netctl-gui-dbus-api.html  netctl-gui-security-notes.html  netctl-gui-security-notes.html~  rawscheme.ppt
sources/gui/resources/: resources.qrc
sources/gui/resources/translations/: english.ts  russian.ts
sources/gui/src/: CMakeLists.txt  about.ui  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  bondwidget.cpp  bondwidget.h  bondwidget.ui  bridgewidget.cpp  bridgewidget.h  bridgewidget.ui  calls.cpp  calls.h  commonfunctions.cpp  commonfunctions.h  controladaptor.cpp  controladaptor.h  dbusoperation.cpp  dbusoperation.h  errorwindow.cpp  errorwindow.h  errorwindow.ui  ethernetwidget.cpp  ethernetwidget.h  ethernetwidget.ui  generalwidget.cpp  generalwidget.h  generalwidget.ui  ipregexp.cpp  ipregexp.h  ipwidget.cpp  ipwidget.h  ipwidget.ui  language.cpp  language.h  macvlanwidget.cpp  macvlanwidget.h  macvlanwidget.ui  main.cpp  mainactions.cpp  (+64 more)
sources/helper/: CMakeLists.txt  bash-completions  netctl-gui.conf  netctl-gui.conf.5  netctlgui-helper.1  netctlgui-helper.conf  netctlgui-helper.conf.5  netctlgui-helper.service  org.netctlgui.helper.conf  zsh-completions
sources/helper/src/: CMakeLists.txt  controladaptor.cpp  controladaptor.h  interfaceadaptor.cpp  interfaceadaptor.h  language.cpp  language.h  main.cpp  messages.cpp  netctladaptor.cpp  netctladaptor.h  netctlhelper.cpp  netctlhelper.h  pdebug.h
sources/icons/: CMakeLists.txt
sources/netctl-dataengine/: CMakeLists.txt  extsysmon.cpp
sources/netctl-gui/: CMakeLists.txt
sources/netctl-gui/src/: CMakeLists.txt
sources/netctl-monitor/: CMakeLists.txt
sources/netctlgui/: CMakeLists.txt  docs.cmake  doxygen.conf.in
sources/netctlgui/include/netctlgui/: netctlgui.h  netctlinteract.h  netctlinterface.h  netctlprofile.h  sleepthread.h  wpasupinteract.h
sources/netctlgui/src/: CMakeLists.txt  main.cpp  netctlgui.h  netctlinteract.cpp  netctlinteract.h  netctlinterface.cpp  netctlprofile.cpp  netctlprofile.h  sleepthread.h  task.h  wpasupinteract.cpp  wpasupinteract.h
sources/plasmoid/: CMakeLists.txt  about.ui  appearance.ui  configwindow.ui  dataengine.ui  netctl.cpp  netctl.h  plasma-applet-netctl.desktop  plasma_applet_netctl.notifyrc  widget.ui
sources/plasmoid-kde4/: CMakeLists.txt  appearance.ui  dataengine.ui  netctl.cpp  netctl.h  plasma-applet-netctl.desktop  widget.ui
sources/plasmoid-kde4/po/: extract_messages.sh
sources/plasmoid-kf5/: CMakeLists.txt  metadata.desktop  netctl.h  plasma_applet_netctl.notifyrc
sources/plasmoid-kf5/package/: metadata.desktop
sources/plasmoid-kf5/package/contents/config/: main.xml
sources/plasmoid-kf5/package/contents/ui/: about.qml  appearance.qml  dataengine.qml  main.qml  widget.qml
sources/plasmoid-kf5/plasmoid/: metadata.desktop
sources/plasmoid-kf5/plasmoid/contents/config/: config.qml  main.xml
sources/plasmoid-kf5/plasmoid/contents/ui/: about.qml  appearance.qml  dataengine.qml  main.qml  widget.qml
sources/plasmoid-kf5/plugin/: CMakeLists.txt  netctl.cpp  netctl.h  netctladds.cpp  netctladds.h  qmldir
sources/plasmoid-kf5/po/: ja.po  plasma_applet_netctl.pot
sources/plasmoid/plasmoid/: metadata.desktop
sources/plasmoid/plasmoid/contents/config/: config.qml  main.xml
sources/plasmoid/plasmoid/contents/ui/: about.qml  appearance.qml  main.qml  main.qml.autosave
sources/plasmoid/plugin/: CMakeLists.txt  netctl.cpp  netctl.h  netctladds.cpp  netctladds.h
sources/plasmoid/po/: en.po  extract_messages.sh  ja.po  plasma_applet_netctl.pot  ru.po
sources/reportabug/: CMakeLists.txt  docs.cmake  doxygen.conf.in  reportabug.desktop  reportabug.h  version.h.in
sources/reportabug/src/: CMakeLists.txt  githubmodule.cpp  githubmodule.h  gitreportmodule.cpp  gitreportmodule.h  inconfig.h.in  main.cpp  reportabug.cpp  reportabug.h  reportabug.ui
sources/resources/: CMakeLists.txt  pinkiepie  resources-helper.qrc  resources-plasmoid.qrc  resources.qrc
sources/resources/po/: CMakeLists.txt  en.po  ja.po
sources/resources/translations/: en.ts  ja.ts  netctl-gui.ts  ru.ts
sources/resources/translations-helper/: en.ts  ja.ts  netctlgui-helper.ts  ru.ts
sources/resources/translations-plasmoid/: CMakeLists.txt  en.po  extract_messages.sh  ja.po  plasma_applet_netctl.pot  ru.po
sources/scripts/: CMakeLists.txt  netctl-gui-netctl  netctl-gui-wpa_supplicant
sources/test/: CMakeLists.txt  testnetctl.cpp  testnetctl.h  testnetctlauto.cpp  testnetctlauto.h  testnetctlprofile.cpp  testnetctlprofile.h  testwpasup.cpp  testwpasup.h
