# set project name
set (SUBPROJECT netctl-gui-scripts)
message (STATUS "Subproject ${SUBPROJECT}")

install (FILES netctl-gui-netctl DESTINATION bin
         PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install (FILES netctl-gui-wpa_supplicant DESTINATION bin
         PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
